--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "docsify serve book"
+    "serve": "docsify serve docs"
   },
   "repository": {
     "type": "git",
